--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="main.css">
      <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css"> <!--  para linkar o css no html-->
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css"> 
@@ -46,32 +46,32 @@
     <div class="carrosel-filmes"> <!-- Adicionar carrosel-->
         <div class="owl-carousel owl-theme"> <!--Tema Padrão owl-theme-->
             <div class="item">
-                <img class="box-filme" src="img/Anne.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Anne.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/Breaking Bead.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Breaking Bead.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/Capa Peaky Blinders.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Capa Peaky Blinders.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/FBI.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/FBI.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/Flash.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Flash.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/Os simpsons.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Os simpsons.jpg" alt="" srcset="">
             </div>
             
             <div class="item">
-                <img class="box-filme" src="img/Outlander.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Outlander.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/The Walking Dead.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/The Walking Dead.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="img/Vikings.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Vikings.jpg" alt="" srcset="">
             </div>
 
         </div>
