--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+
+    <!--responsividade-->
+    <link rel="stylesheet" href="/style/owl/responsive.css">
+
      <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css"> <!--  para linkar o css no html-->
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css"> 
@@ -34,10 +38,10 @@
             </div>    
             <div class="div-botao">
                 <button class="botao-1">
-                    ASSISTIR AGORA
+                <strong>ASSISTIR AGORA</strong>
                 </button>
                 <button class="botao-2">
-                    MAIS INFORMAÇÕES
+                <strong>MAIS INFORMAÇÕES</strong>
                 </button>
             </div>
         </div>        
@@ -46,13 +50,13 @@
     <div class="carrosel-filmes"> <!-- Adicionar carrosel-->
         <div class="owl-carousel owl-theme"> <!--Tema Padrão owl-theme-->
             <div class="item">
-                <img class="box-filme" src="assets/Anne.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Capa Peaky Blinders.jpg" alt="" srcset="">
             </div>
             <div class="item">
                 <img class="box-filme" src="assets/Breaking Bead.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-filme" src="assets/Capa Peaky Blinders.jpg" alt="" srcset="">
+                <img class="box-filme" src="assets/Anne.jpg" alt="" srcset="">
             </div>
             <div class="item">
                 <img class="box-filme" src="assets/FBI.jpg" alt="" srcset="">
